--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,7 @@
 			<center><b><h1>Contact  Information</h1></b>
 			<b><p>Please feel free to contact us with any questions.</p></b>
 			<br />
-			<br /><p>Mike Lennox		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(775) 213-4674		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
-			<br /><p>Christy Lennox		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(775) 412-5528		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:christywinder@yahoo.com">christywinder@yahoo.com</a></p>
+			<br /><p>Mike and Christine Lenox		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(775) 741-4707		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:SilverStateWineryandVineyard@yahoo.com">christywinder@yahoo.com</a></p>
 			<!--End main--></center>
 			</div>   
 			 <!--End body-->
