new social icons

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
 		}
 		</script>
 			<body>
-			<div id="container"> 
-			<script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-67364f62-e92f-44e7-b261-898cb2d90eb6"></div>
+			<div class="icons-wrapper">
+				<i class="ri-facebook-circle-line icon"><img src="img/socialMedia/facebook.png" alt="facebook link"></i>
+				<i class="ri-instagram-line icon"><img src="img/socialMedia/instagram.png" alt="instagram link"></i>
+				<i class="ri-youtube-line icon"><img src="img/socialMedia/youtube.png" alt="youtube link"></i>
+			</div>
+			<div id="container">
 			<div id="banner">
 							<div id="logo">
 							<img src="img/logo.gif" alt="logo">
