--- a/products.html
+++ b/products.html
@@ -100,6 +100,11 @@
 		}
 		</script>
 	<body>
+				<div class="icons-wrapper">
+				<i class="ri-facebook-circle-line icon"><img src="img/socialMedia/facebook.png" alt="facebook link"></i>
+				<i class="ri-instagram-line icon"><img src="img/socialMedia/instagram.png" alt="instagram link"></i>
+				<i class="ri-youtube-line icon"><img src="img/socialMedia/youtube.png" alt="youtube link"></i>
+			</div>
 	<div id="container"> 
 	<div id="banner">
 					<div id="logo">
