--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 			<center><b><h1>Contact  Information</h1></b>
 			<b><p>Please feel free to contact us with any questions.</p></b>
 			<br />
-			<br /><p>Mike and Christine Lenox		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(775) 741-4707		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:SilverStateWineryandVineyard@yahoo.com">christywinder@yahoo.com</a></p>
+			<br /><p>Mike and Christine Lenox		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(775) 741-4707		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:silverstatevandw@gmail.com">SilverStateVandW@gmail.com</a></p>
 			<!--End main--></center>
 			</div>   
 			 <!--End body-->
