--- a/vineyard.html
+++ b/vineyard.html
@@ -95,7 +95,7 @@
 		<br /><br />&nbsp;&nbsp;
 		<center><b><h1>Photos</h1></b>
 <div class="w3-content w3-display-container" style="max-width:800px">
-  <img class="mySlides" src="img/photos/DSC09827.jpg" style="width:90%">
+  <img class="mySlides" src='img/photos/chistyMike.JPG' style="width:70%">
   <img class="mySlides" src="img/photos/DSC09828.jpg" style="width:90%">
   <img class="mySlides" src="img/photos/DSC09835.jpg" style="width:90%">
   <img class="mySlides" src="img/photos/IMG_0660.jpg" style="width:90%">
@@ -153,17 +153,10 @@ function showDivs(n) {
 </script>
 		<!--End main-->
 		</div>
-            <div id="sidebar"><br />
-			<img src="img/clan2.gif" alt="Campbell Clan" style="width:160px;height:96px;"><br /><br /><br />
-			<img src="img/mt.gif" alt="Mt. SAC" style="width:160px;height:120px;"><br /><br /><br />
-			<img src="img/fres.gif" alt="Fresno Pacific" style="width:160px;height:101px;"><br /><br /><br />
-			<img src="img/wuhs.gif" alt="WUHS" style="width:160px;height:160px;">
-			<!--End sidebar-->
-			</div>     
 		 <!--End body-->
 		</div>
 		<div id="footer"><br /><br /><br />
-		<center>Silver State Winery and Vinyard<br>1285 W 9th Street Siver Springs, NV<br>©Site Design 2021</center>
+		<center>Silver State Winery and Vineyard<br>1285 W 9th Street Silver Springs, NV<br>©Site Design 2021</center>
 		 <!--End footer-->
 		 </div>
 		 <!--End Container-->
